--- a/app/views/report.html
+++ b/app/views/report.html
@@ -5,7 +5,7 @@
   </div>
   
   <div class="pull-right">
-      <div>Select campaign</div>
+      <div>Select company</div>
       <select class="form-control" ng-model="campaign" ng-options="z.id as z.name for z in campaigns" ng-change="setCampaignTitle()" placeholder="Select campaign name for report"></select>
       <br/>
       <a type="button" class="btn btn-success" ng-click="show_edit()"><span class="glyphicon glyphicon-plus"></span> Add</a>
