--- a/app/views/report.html
+++ b/app/views/report.html
@@ -31,7 +31,7 @@
         <td ng-bind="calculate(item.value,item.rate) || 0"></td>
         <td><button type="button" class="btn btn-info" ng-click="show_edit(item)"><span class="glyphicon glyphicon-pencil"></span> edit</button></td>
     </tr>
-    
+    <div class="pull-rught">Total : {{total}}</div>
   </table>
 </div>
 <div ng-controller="UploadCtrl"><ng-include src="'views/upload.html'"></ng-include></div>
