--- a/app/views/lib/row.html
+++ b/app/views/lib/row.html
@@ -21,7 +21,7 @@
         </div>
         
         <div class="form-group">
-            <span ng-bind="(calculate(row.value,row.rate) | number:4)"></span>
+            <span ng-bind="(calculate_me(row.value,row.rate) | number:2)"></span>
         </div>
         
         <button type="submit" class="btn btn-default" ng-click="save(row)">Submit</button>
