--- a/app/views/report.html
+++ b/app/views/report.html
@@ -33,6 +33,6 @@
     </tr>
     
   </table>
-  <div class="pull-rught"><b>Total : {{(calc_total())}}</b></div>
+  <div class="pull-rught"><b>Total : {{(calc_total(data))}}</b></div>
 </div>
 <div ng-controller="UploadCtrl"><ng-include src="'views/upload.html'"></ng-include></div>
