--- a/app/views/report.html
+++ b/app/views/report.html
@@ -31,7 +31,7 @@
         <td ng-bind="calculate_me(item.value,item.rate) || 0"></td>
         <td><button type="button" class="btn btn-info" ng-click="show_edit(item)"><span class="glyphicon glyphicon-pencil"></span> edit</button></td>
     </tr>
-    <tr><td colspan="7" class="pull-rught">Total : {{(calc_total(data))}}</td></tr>
+    <tr><td colspan="7"><span class="pull-rught">Total : {{(calc_total(data))}}</span></td></tr>
   </table>
   
 </div>
