--- a/app/views/report.html
+++ b/app/views/report.html
@@ -1,16 +1,16 @@
 <div class="" ng-controller="ReportCtrl">
   
   <div class="col-md-6 pull-left">
-    <h3>{{campaign_title || '&nbsp;'}}</h3>
+    <h3>{{company_title || '&nbsp;'}}</h3>
   </div>
   
-  <div class="pull-right">
+  <div class="pull-right row">
       <div>Select company</div>
-      <select class="form-control" ng-model="campaign" ng-options="z.id as z.name for z in campaigns" ng-change="setCampaignTitle()" placeholder="Select campaign name for report"></select>
+      <select class="form-control" ng-model="company_id" ng-options="z.id as z.name for z in companies" ng-change="set_company_title()" placeholder="Select company name for report"></select>
       <br/>
-      <a type="button" class="btn btn-success" ng-click="show_edit()"><span class="glyphicon glyphicon-plus"></span> Add</a>
+      <a type="button" class="btn btn-success" ng-click="show_edit()" ng-disabled="(!company_id)"><span class="glyphicon glyphicon-plus"></span> Add</a>
   </div>
-  <br/><br/>
+  <br/><br/><br/><br/>
   <table class="table table-striped table-bordered">
     <tr>
         <th width="40%">Walbro Employees Entertained<div class="text-muted"><small>List names of Walbro employees involved in expense</small></div></th>
@@ -33,6 +33,6 @@
     </tr>
     <tr><td colspan="7"><span class="pull-rught">Total : {{(calc_total(data))}}</span></td></tr>
   </table>
-  
+
 </div>
-<div ng-controller="UploadCtrl"><ng-include src="'views/upload.html'"></ng-include></div>
+<div ng-controller="UploadCtrl" ng-show="report_id"><ng-include src="'views/upload.html'"></ng-include></div>
