add report list

--- a/app/views/report.html
+++ b/app/views/report.html
@@ -1,4 +1,9 @@
 <div class="" ng-controller="ReportCtrl">
+  <ol class="breadcrumb">
+      <li><a href="#/">Report list</a></li>
+      <li class="active">Report №{{report_id}}</li>
+  </ol>
+  
   
   <div class="col-md-6 pull-left">
     <h3>{{company_title || '&nbsp;'}}</h3>
